--- a/diploma.html
+++ b/diploma.html
@@ -260,7 +260,7 @@
                 <td>Month- Six</td>
             </tr>
         </table><br><br><br>
-        <a class="apply-now" href="#">Apply Now</a>
+        <a class="apply-now" href="https://forms.gle/m7i7MDDTQysNNn9E7" target="_blank">Apply Now</a>
 
     </section>
 
@@ -298,7 +298,7 @@
                 <li>Time Series Analysis</li>
             </ul><br>
 
-            <a class="apply-now" href="#">Apply Now</a>
+            <a class="apply-now" href="https://forms.gle/m7i7MDDTQysNNn9E7" target="_blank">Apply Now</a>
             
             
     </section>
@@ -335,7 +335,7 @@
             <li>Principal components & Factor Analysis</li>
             <li>Time Series Analysis</li>
         </ul><br>
-        <a class="apply-now" href="#">Apply Now</a>
+        <a class="apply-now" href="https://forms.gle/m7i7MDDTQysNNn9E7" target="_blank">Apply Now</a>
 
 
     </section>
@@ -400,7 +400,7 @@
         </ol><br>
         <h5 class="diploma-header2">Award of Attendance:</h5>
         <p class="diploma-text">After the effective participation in the course, the attendees will receive a certificate from University of Sustainable Development (USD)</p><br>
-        <a class="apply-now" href="#">Apply Now</a>
+        <a class="apply-now" href="https://forms.gle/m7i7MDDTQysNNn9E7" target="_blank">Apply Now</a>
 
 
 
