--- a/forIntern.html
+++ b/forIntern.html
@@ -119,7 +119,7 @@
         <h5 class="career-decriptions-header2">Apply </h5>
         
         <h3 class="career-decriptions-text">Mail us on <a href="mailto:usd.info.office@gmail.com">usd.info.office@gmail.com</a> must attach which was mentioned <br>Or, </h3>
-        <a class="apply-now" href="#">Apply Now</a>
+        <a class="apply-now" href="https://forms.gle/KXxGah5e9EBGpkSq9" target="_blank">Apply Now</a>
 
 
     </section>    
