--- a/forIntern.html
+++ b/forIntern.html
@@ -159,11 +159,11 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="tel:">+8801853136927</a></li>
+                <li class="contact-info">WhatsApp: <a href="#"></a></li>
             </ul>
 
             <ul class="icons">
-                <li><a href="tel:01853136927" target="_blank"><i class="fas fa-phone"></i></a></li>
+                <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
                 <li><a href="mailto:usd.info.office@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
