--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             
         </div>
         <div class="youtube">
-            <iframe class="youtube-video" src="https://www.youtube.com/embed/3JCuzY7YjcQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="youtube-video"  src="https://www.youtube.com/embed/jkxj8GT9b2o" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
     <!-- Notice & Youtube  End -->
@@ -185,11 +185,11 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="tel:">+8801853136927</a></li>
+                <li class="contact-info">WhatsApp: <a href="#"></a></li>
             </ul>
 
             <ul class="icons">
-                <li><a href="tel:01853136927" target="_blank"><i class="fas fa-phone"></i></a></li>
+                <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
                 <li><a href="mailto:usd.info.office@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
