--- a/team.html
+++ b/team.html
@@ -86,38 +86,197 @@
     <!-- Team Section Start -->
     <section class="teams">
         <div class="team">
-            <img src="Assets/Images/Team/Baki.jpg" alt="">
-            <h3 class="name">Mr. Abul Hasan, PhD (ABD)</h3>
-            <h5 class="designation">Director, Academic Affairs</h5>
+            <img src="Assets/Images/Team/Abul.jpg" alt="">
+            <h3 class="name">Abul Hasan </h3>
+            <h5 class="designation">Dean, Academic Affairs & Director, Administration </h5>
         </div>
 
         <div class="team">
-            <img src="Assets/Images/Team/Shahabuddin.jpg" alt="">
-            <h3 class="name">Mr. Md. Shahabuddin, MBA, BBA</h3>
-            <h5 class="designation">Deputy Director, Academic Affairs</h5>
+            <img src="Assets/Images/Team/Besong.jpg" alt="">
+            <h3 class="name">Dr. Frida Agbor Besong</h3>
+            <h5 class="designation">Pro-Vice Chancellor (Academic)</h5>
         </div>
 
         <div class="team">
-            <img src="Assets/Images/Team/Minhaj.jpg" alt="">
-            <h3 class="name">Minhazul Abedin, MA, MDM</h3>
-            <h5 class="designation">Deputy Registrar</h5>
+            <img src="Assets/Images/Team/Faisal.jpg" alt="">
+            <h3 class="name">Faisal Muhammad, PhD (ABD)</h3>
+            <h5 class="designation">Director, Advisory Board & Dean, Faculty of Public Health </h5>
         </div>
 
         <div class="team">
             <img src="Assets/Images/Team/Adil.jpg" alt="">
-            <h3 class="name">Eng. Md Adiluzzaman Adil</h3>
-            <h5 class="designation">Director, Information Technology Division</h5>
+            <h3 class="name">Eng. Md. Adiluzzaman Adil</h3>
+            <h5 class="designation">Dean, Faculty of Computer Science Engineering & Director, IT Division </h5>
         </div>
 
         <div class="team">
-            <img src="Assets/Images/Team/" alt="">
-            <h3 class="name">Faisal Muhammad, PhD (ABD)</h3>
-            <h5 class="designation">Dean, Faculty of Allied Health Sciences </h5>
+            <img src="Assets/Images/Team/Minhaj.jpg" alt="">
+            <h3 class="name">Md. Minhazul Abedin </h3>
+            <h5 class="designation">Dean, Faculty of Disaster Management & Deputy Registrar </h5>
         </div>
-
-        
-
+        <div class="team">
+            <img src="Assets/Images/Team/Shahabuddin.jpg" alt="">
+            <h3 class="name">Md Shahabuddin</h3>
+            <h5 class="designation">Dean, Faculty of Business Administration </h5>
+        </div>
     </section>
+    <hr>
+    <h1 class="team-header">Afghanistan</h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Zwan.jpg" alt="">
+            <h3 class="name">Dr. Mohammad Ishaq Zwan </h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section> 
+    <hr>
+    <h1 class="team-header">Bangladesh</h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Zajid.jpg" alt="">
+            <h3 class="name">Dr. Mozahidul Islam Zajid</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/unknown1.jpg" alt="">
+            <h3 class="name"> .</h3>
+            <h5 class="designation">Dean, Faculty of Psychology </h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/Hafeez.jpg" alt="">
+            <h3 class="name">Tasphia Nahian Hafeez</h3>
+            <h5 class="designation">Lecturer, Department of Mass Communication & Journalism</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Benin</h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/ATTANNON.jpg" alt="">
+            <h3 class="name">DEGBE DESIRE FIOGBE ATTANNON</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Cameroon</h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Busi.jpg" alt="">
+            <h3 class="name">Dr Busi</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/NJIMELEKI.jpg" alt="">
+            <h3 class="name">Dr NJIMELEKI ANTHONY MOLESY</h3>
+            <h5 class="designation">Professor, Educational Psychology</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Egypt</h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Nouran.jpg" alt="">
+            <h3 class="name">Dr Nouran Hamza</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Niger </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Ousseini.jpg" alt="">
+            <h3 class="name">Hassane Ousseini</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+    <h1 class="team-header">Nigeria  </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Ayanwale.jpg" alt="">
+            <h3 class="name">Dr. Ayanwale Musa Adekunle</h3>
+            <h5 class="designation">Dean, Faculty of Quality and Affordable  Education</h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/Uwais.jpg" alt="">
+            <h3 class="name">Uwais Aminu</h3>
+            <h5 class="designation">Assistant Professor, Department of Pharmacy </h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/Abdullahi.jpg" alt="">
+            <h3 class="name">Abdullahi Ishaq </h3>
+            <h5 class="designation">Assistant Professor, Department of Pharmacy </h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Gambia </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Lamin.jpg" alt="">
+            <h3 class="name">Lamin Ndow</h3>
+            <h5 class="designation">Assistant Professor, 
+                Department of Public Health Laboratory
+                </h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Pakistan </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Ameer.jpg" alt="">
+            <h3 class="name">Ameer Muhammad</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Somalia-Bosaso </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Nimco.jpg" alt="">
+            <h3 class="name">Nimco Abdirahman Mohamed</h3>
+            <h5 class="designation">Campus Director</h5>
+        </div>
+    </section>
+    <h1 class="team-header">Somalia-Qardho </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Abdi.jpg" alt="">
+            <h3 class="name">Saahid Mohamoud Abdi</h3>
+            <h5 class="designation">Campus Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Somalia_Mogadishu </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Ali.jpg" alt="">
+            <h3 class="name">Ahmed Ali Mohamed</h3>
+            <h5 class="designation">Campus Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Syria </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Alaa.jpg" alt="">
+            <h3 class="name">Alaa Hamdan</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+    <hr>
+    <h1 class="team-header">Uganda </h1>
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Semukuye.jpg" alt="">
+            <h3 class="name">Semukuye Joshua</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+        <div class="team">
+            <img src="Assets/Images/Team/Dinah.jpg" alt="">
+            <h3 class="name">Dinah Sanyu</h3>
+            <h5 class="designation">Country Director</h5>
+        </div>
+    </section>
+
     <!-- Team Section End -->
 
     <!-- FOOTER Start -->
@@ -154,11 +313,11 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="tel:">+8801853136927</a></li>
+                <li class="contact-info">WhatsApp: <a href="#"></a></li>
             </ul>
 
             <ul class="icons">
-                <li><a href="tel:01853136927" target="_blank"><i class="fas fa-phone"></i></a></li>
+                <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
                 <li><a href="mailto:usd.info.office@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
