--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Nav Bar Start -->
-    <div class="wrapper">
+    <div class="wrapper" id="navbar">
         <nav>
             <input type="checkbox" id="show-menu">
             <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
@@ -325,5 +325,18 @@
     <!-- FOOTER End -->
 
 </body>
-
 </html>
+<script>
+    window.onscroll = function() {myFunction()};
+    
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+    
+    function myFunction() {
+      if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+      } else {
+        navbar.classList.remove("sticky");
+      }
+    }
+    </script>
