--- a/mission.html
+++ b/mission.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Nav Bar Start -->
-    <div class="wrapper">
+    <div class="wrapper" id="navbar">
         <nav>
             <input type="checkbox" id="show-menu">
             <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
