--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
     </footer>
     <!-- FOOTER End -->
 
-    <!-- Javascript Link -->
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
     <script src="Js/index.js"></script>
 
 </body>
-
 </html>
