--- a/diploma.html
+++ b/diploma.html
@@ -606,6 +606,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
