--- a/eidulfitr2023.html
+++ b/eidulfitr2023.html
@@ -140,6 +140,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
