--- a/masters.html
+++ b/masters.html
@@ -204,6 +204,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
