--- a/patners.html
+++ b/patners.html
@@ -157,6 +157,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
