--- a/shortcourse.html
+++ b/shortcourse.html
@@ -144,6 +144,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
