--- a/story.html
+++ b/story.html
@@ -146,6 +146,8 @@
     </footer>
     <!-- FOOTER End -->
 
-</body>
+    <!-- JS Link -->
+    <script src="Js/header.js"></script>
 
+</body>
 </html>
