--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
             <div><i class="fas fa-clock"></i>Sunday to Friday - 10:00am TO 20:00pm</div>
         </div>
         <div class="contract-form">
-            <h2 class="contact-title">Contact Us</h2>
+            <h2 class="contact-title">Contact</h2>
             <form class="contract-form-section" action="" id="form" method="post">
                 <input type="text" name="user_name" class="text-box" placeholder="Enter Name" required>
                 <input type="email" name="user_email" class="text-box" placeholder="Enter Email" required>
