--- a/traning.html
+++ b/traning.html
@@ -36,7 +36,7 @@
                                 <input type="checkbox" id="show-items">
                                 <label for="show-items">Postgrade <i class="fas fa-angle-down"></i></label>
                                 <ul>
-                                    <li><a href="PhD.html">Phd</a></li>
+                                    <li><a href="PhD.html">PhD</a></li>
                                     <li><a href="masters.html">Masters</a></li>
                                 </ul>
                             </li>
