--- a/patners.html
+++ b/patners.html
@@ -91,19 +91,19 @@
             <div class="patners">
                 <div class="patner">
                     <img src="Assets/Images/Patners/DUHC.jpg" alt="">
-                    <p class="patner-txt">Dhaka University Health Club (DUHC)</p>
+                    <p class="patner-txt">Dhaka University Health Club (DUHC), Bangladesh</p>
                 </div>
                 <div class="patner">
                     <img src="Assets/Images/Patners/IRT.jpg" alt="">
-                    <p class="patner-txt">Otu Institute of Research & Training (OIRT) </p>
+                    <p class="patner-txt">Otu Institute of Research & Training (OIRT), United Kingdom</p>
                 </div>
                 <div class="patner">
                     <img src="Assets/Images/Patners/ZMC.jpg" alt="">
-                    <p class="patner-txt">Zawan Curative Hospital </p>
+                    <p class="patner-txt">Zawan Curative Hospital, Afghanistan</p>
                 </div>
                 <div class="patner">
                     <img src="Assets/Images/Patners/HRL.jpg" alt="">
-                    <p class="patner-txt"> 	Hamdan's Research Lab  </p>
+                    <p class="patner-txt"> 	Hamdan's Research Lab, Syria</p>
                 </div>
 
             </div>
