--- a/contact.html
+++ b/contact.html
@@ -93,9 +93,9 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div><i class="fas fa-map-marker-alt"></i>Hazi Alam Hossen Road, Chand Uddyan Housing,Beribadh,
-                Mphammadpur, Dhaka-1207, Bangladesh
+                Mohammadpur, Dhaka-1207, Bangladesh
             </div>
-            <div><i class="fas fa-envelope-square"></i>info.usd@gmail.com</div>
+            <div><i class="fas fa-envelope-square"></i>usd.info.office@gmail.com</div>
             <div><i class="fas fa-phone-square-alt"></i>01712345678</div>
             <div><i class="fas fa-clock"></i>Sunday to Friday - 10:00am TO 20:00pm</div>
         </div>
@@ -155,7 +155,7 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
-                <li class="contact-info">Savar, Dhaka</li>
+                <li class="contact-info">Mohammadpur, Dhaka</li>
                 <li class="contact-info">WhatsApp: <a href="#"></a></li>
             </ul>
 
