--- a/forIntern.html
+++ b/forIntern.html
@@ -158,7 +158,7 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
-                <li class="contact-info">Savar, Dhaka</li>
+                <li class="contact-info">Mohammadpur, Dhaka</li>
                 <li class="contact-info">WhatsApp: <a href="#"></a></li>
             </ul>
 
