--- a/team.html
+++ b/team.html
@@ -167,7 +167,7 @@
         </div>
         <div class="team">
             <img src="Assets/Images/Team/NJIMELEKI.jpg" alt="">
-            <h3 class="name">Dr NJIMELEKI ANTHONY MOLESY</h3>
+            <h3 class="name">Dr Njimeleki Anthony Molesy</h3>
             <h5 class="designation">Professor, Educational Psychology</h5>
         </div>
     </section>
