--- a/team.html
+++ b/team.html
@@ -138,8 +138,8 @@
             <h5 class="designation">Country Director</h5>
         </div>
         <div class="team">
-            <img src="Assets/Images/Team/unknown1.jpg" alt="">
-            <h3 class="name"> .</h3>
+            <img src="Assets/Images/Team/Mim.jpg" alt="">
+            <h3 class="name">Ms. Mahmuda Islam Mim</h3>
             <h5 class="designation">Dean, Faculty of Psychology </h5>
         </div>
         <div class="team">
