--- a/PhD.html
+++ b/PhD.html
@@ -59,7 +59,10 @@
                                     <li><a href="traning.html">Traning</a></li>
                                 </ul>
                             </li>
+                            <a href="islamic.html">Islamic</a>
+
                         </ul>
+                        
                     </li>
                     <li><a href="patners.html">Partners</a></li>
                     <li><a href="activities.html">Activities</a></li>
