--- a/bechelors.html
+++ b/bechelors.html
@@ -18,6 +18,7 @@
 
 <body>
     <!-- Nav Bar Start -->
+    <!-- Nav Bar Start -->
     <div class="wrapper" id="navbar">
         <nav>
             <input type="checkbox" id="show-menu">
@@ -59,7 +60,10 @@
                                     <li><a href="traning.html">Traning</a></li>
                                 </ul>
                             </li>
+                            <a href="islamic.html">Islamic</a>
+
                         </ul>
+                        
                     </li>
                     <li><a href="patners.html">Partners</a></li>
                     <li><a href="activities.html">Activities</a></li>
