--- a/eidulfitr2023.html
+++ b/eidulfitr2023.html
@@ -59,7 +59,10 @@
                                     <li><a href="traning.html">Traning</a></li>
                                 </ul>
                             </li>
+                            <a href="islamic.html">Islamic</a>
+
                         </ul>
+
                     </li>
                     <li><a href="patners.html">Partners</a></li>
                     <li><a href="activities.html">Activities</a></li>
@@ -77,7 +80,7 @@
                     <li><a href="journals.html">Journal</a></li>
                     <li><a href="career.html">Career</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    
+
                 </ul>
             </div>
         </nav>
@@ -90,7 +93,8 @@
         <div class="images">
             <img src="Assets/Images/Acitivites/Eid Ul Fitar 2023.jpg" alt="">
         </div>
-        <p class="todaysactivities-text">Have A Blaced Eid <br>Wishing your family a joyous celebration! May Allah shower you countless blessings.</p>
+        <p class="todaysactivities-text">Have A Blaced Eid <br>Wishing your family a joyous celebration! May Allah
+            shower you countless blessings.</p>
         </div>
     </section>
     <!-- Activities Section End -->
@@ -99,11 +103,17 @@
     <footer class="footer">
         <div class="about">
             <h3 class="footer-title">About Us</h3>
-            <p class="footer-text">This is a tertiary level research-based educational institute aiming to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way.</p>
+            <p class="footer-text">This is a tertiary level research-based educational institute aiming to serve the
+                world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable,
+                attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive
+                way.</p>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/company/university-of-sustainable-development-usd/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://www.facebook.com/usdedubd/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UChfsDZePc1k950SgCip_qLg" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/university-of-sustainable-development-usd/"
+                        target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/usdedubd/" target="_blank"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.youtube.com/channel/UChfsDZePc1k950SgCip_qLg" target="_blank"><i
+                            class="fab fa-youtube"></i></a></li>
             </ul>
         </div>
 
@@ -144,4 +154,5 @@
     <script src="Js/header.js"></script>
 
 </body>
+
 </html>
