--- a/islamic.html
+++ b/islamic.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/vision.css">
+    <link rel="stylesheet" href="Styles/islamic.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
-    <title>USD | Vision</title>
+    <title>USD | Islamic</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
 </head>
 
@@ -86,12 +86,112 @@
         </nav>
     </div>
     <!-- Nav Bar End -->
-    <!-- Vision Section Start -->
-    <section class="vision">
-        <h1 class="vision-title">Our Vision</h1>
-        <p class="vision-text"><sub class="comma">"</sub>To be the leading educational Institute for resolving the world's pressing challenges in a sustainable as well as inclusive way affecting people across the globe. <sub class="comma">"</sub></p>
+    <!-- islamic Section Start -->
+    <section class="islamic">
+        <h3><a class="islamic-title" href="#Shariah">Diploma in Islamic Shariah </a></h3>
+        <h3><a class="islamic-title" href="#Civilization">Diploma in Islamic History & Civilization </a></h3>
+        <h3><a class="islamic-title" href="#Hadith">Diploma in Understanding Hadith</a></h3>
+        <h3><a class="islamic-title" href="#Quran">Diploma in Understanding Quran </a></h3>
+        <h3><a class="islamic-title" href="#Parenting">Diploma in Islamic Parenting </a></h3>
+        <h3><a class="islamic-title" href="#ABC_Pregnancy">Diploma in ABC of Pregnancy And Islamic Rulings </a></h3>
+        <h3><a class="islamic-title" href="#ABC_Marital">Diploma in ABC of Marital Life And lslamic Rulings </a></h3>
+        <h3><a class="islamic-title" href="#Muslim_Women">Diploma in Social Life of Muslim Women </a></h3>
+        <h3><a class="islamic-title" href="#Sources_Islam">Diploma in Income Sources And Islam</a></h3>
+        <h3><a class="islamic-title" href="#Interest_Islam">Diploma in Interest and Islam</a></h3>
+        <h3><a class="islamic-title" href="#Diploma_PBUH">Diploma in Prophetic Care (Tibbe- Nababwe PBUH)</a></h3>
+        <h3><a class="islamic-title" href="#Hijab">Diploma in Burqa and Hijab for Muslim Women</a></h3>
+        <h3><a class="islamic-title" href="#Rulings">Diploma in Family Management with Islamic Rulings </a></h3>
+        <h3><a class="islamic-title" href="#Interior">Diploma in Interior Decoration with Islamic Rulings </a></h3>
+        <h3><a class="islamic-title" href="#Financial">Diploma in Financial Management in Family with Islamic Rulings </a></h3>
+        <h3><a class="islamic-title" href="#Memorizing">Diploma in Memorizing the Quran </a></h3>
+        <h3><a class="islamic-title" href="#Issues">islamic on Pre-Marital Issues</a></h3>
+        <h3><a class="islamic-title" href="#Sexual">Training on Sexual Life in the Light of Islam </a></h3>
+        <h3><a class="islamic-title" href="#Islamic_Parenting">Training on Islamic Parenting </a></h3>
+        <h3><a class="islamic-title" href="#Training_PBUH">Training on Prophetic Care (Tibbe- Nababwe PBUH)</a></h3>
     </section>
-    <!-- Vision Section End -->
+
+    <section id="Shariah" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Islamic Shariah</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Civilization" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Islamic History & Civilization</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Hadith" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Understanding Hadith</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Quran" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Understanding Quran</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Parenting" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Islamic Parenting</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="ABC_Pregnancy" class="islamic-section">
+        <h1 class="islamic-header">Diploma in ABC of Pregnancy And Islamic Rulings </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="ABC_Marital" class="islamic-section">
+        <h1 class="islamic-header">Diploma in ABC of Marital Life And lslamic Rulings </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Muslim_Women" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Social Life of Muslim Women </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Sources_Islam" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Income Sources And Islam</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Interest_Islam" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Interest and Islam</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Diploma_PBUH" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Prophetic Care (Tibbe- Nababwe PBUH)</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Hijab" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Burqa and Hijab for Muslim Women</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Rulings" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Family Management with Islamic Rulings</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Interior" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Interior Decoration with Islamic Rulings</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Financial" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Financial Management in Family with Islamic Rulings</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Memorizing" class="islamic-section">
+        <h1 class="islamic-header">Diploma in Memorizing the Quran </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Issues" class="islamic-section">
+        <h1 class="islamic-header">islamic on Pre-Marital Issues</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Sexual" class="islamic-section">
+        <h1 class="islamic-header">Training on Sexual Life in the Light of Islam </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Islamic_Parenting" class="islamic-section">
+        <h1 class="islamic-header">Training on Islamic Parenting </h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    <section id="Training_PBUH" class="islamic-section">
+        <h1 class="islamic-header">Training on Prophetic Care (Tibbe- Nababwe PBUH)</h1>
+        <p class="islamic-text">Comming Soon...</p>
+    </section>
+    
+    <!-- islamic Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
