--- a/eidulfitr2023.html
+++ b/eidulfitr2023.html
@@ -32,37 +32,36 @@
                         <label for="show-services">Academic Programme <i class="fas fa-angle-down"></i></label>
                         <ul>
                             <li>
-                                <a href="#" class="desktop-link">Postgrade <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Postgraduates <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items">
-                                <label for="show-items">Postgrade <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items">Postgraduates <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="PhD.html">PhD</a></li>
                                     <li><a href="masters.html">Masters</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="desktop-link">Undergrade <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Undergraduates <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items2">
-                                <label for="show-items2">Undergrade <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items2">Undergraduates <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="bechelors.html">Bechelor</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="desktop-link">Specialized <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Others <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items3">
-                                <label for="show-items3">Specialized <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items3">Others <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="diploma.html">Diploma</a></li>
                                     <li><a href="shortcourse.html">Short Course</a></li>
                                     <li><a href="workshop.html">Workshop</a></li>
                                     <li><a href="traning.html">Traning</a></li>
+                                    <li><a href="islamic.html">Islamic</a></li>
                                 </ul>
                             </li>
-                            <a href="islamic.html">Islamic</a>
-
                         </ul>
-
+                        
                     </li>
                     <li><a href="patners.html">Partners</a></li>
                     <li><a href="activities.html">Activities</a></li>
@@ -71,7 +70,7 @@
                         <input type="checkbox" id="show-features">
                         <label for="show-features">About <i class="fas fa-angle-down"></i></label>
                         <ul>
-                            <li><a href="story.html">Story</a></li>
+                            <li><a href="story.html">History</a></li>
                             <li><a href="vision.html">Vision</a></li>
                             <li><a href="mission.html">Mission</a></li>
                             <li><a href="team.html">Team</a></li>
@@ -80,7 +79,7 @@
                     <li><a href="journals.html">Journal</a></li>
                     <li><a href="career.html">Career</a></li>
                     <li><a href="contact.html">Contact</a></li>
-
+                    
                 </ul>
             </div>
         </nav>
