--- a/story.html
+++ b/story.html
@@ -32,35 +32,34 @@
                         <label for="show-services">Academic Programme <i class="fas fa-angle-down"></i></label>
                         <ul>
                             <li>
-                                <a href="#" class="desktop-link">Postgrade <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Postgraduates <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items">
-                                <label for="show-items">Postgrade <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items">Postgraduates <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="PhD.html">PhD</a></li>
                                     <li><a href="masters.html">Masters</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="desktop-link">Undergrade <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Undergraduates <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items2">
-                                <label for="show-items2">Undergrade <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items2">Undergraduates <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="bechelors.html">Bechelor</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="desktop-link">Specialized <i class="fas fa-angle-down"></i></a>
+                                <a href="#" class="desktop-link">Others <i class="fas fa-angle-down"></i></a>
                                 <input type="checkbox" id="show-items3">
-                                <label for="show-items3">Specialized <i class="fas fa-angle-down"></i></label>
+                                <label for="show-items3">Others <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="diploma.html">Diploma</a></li>
                                     <li><a href="shortcourse.html">Short Course</a></li>
                                     <li><a href="workshop.html">Workshop</a></li>
                                     <li><a href="traning.html">Traning</a></li>
+                                    <li><a href="islamic.html">Islamic</a></li>
                                 </ul>
                             </li>
-                            <a href="islamic.html">Islamic</a>
-
                         </ul>
                         
                     </li>
@@ -71,7 +70,7 @@
                         <input type="checkbox" id="show-features">
                         <label for="show-features">About <i class="fas fa-angle-down"></i></label>
                         <ul>
-                            <li><a href="story.html">Story</a></li>
+                            <li><a href="story.html">History</a></li>
                             <li><a href="vision.html">Vision</a></li>
                             <li><a href="mission.html">Mission</a></li>
                             <li><a href="team.html">Team</a></li>
@@ -89,7 +88,7 @@
     <!-- Story Section Start -->
 
     <section class="story">
-        <h1 class="story-title">Our Story</h1>
+        <h1 class="story-title">Our History</h1>
         <p class="story-text"><sub class="comma">"</sub>This tertiary level research-based educational institute kicks-off its journey with an aim to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way. <sub class="comma">"</sub></p>
 
         <p class="story-text">This is the legacy of Forida Seraj Ideal School & College (FSISC) established in the year 2011 in Dhaka, Bangladesh which has been delivering its excellence and marking the sign of eminence through quality education among the poor pupils, children, and adolescents resided in Dhaka city of Bangladesh. With an aim to operate educational activities, It has gained permission and accreditation from the concerned departments of the Ministry of Education of the People's Republic of Bangladesh. </p>
