Change Map To Text & Slide Images

--- a/contact.html
+++ b/contact.html
@@ -90,13 +90,15 @@
     <section class="contract">
         <div class="contract-info">
             <h2 class="contact-title">Contact Info</h2>
-            <iframe title="" class="map"
-            src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d3651.737257411086!2d90.352093!3d23.7567471!3m2!1i1024!2i768!4f13.1!2m1!1schand%20uddan%20housing%2C%20mohammadpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1683140674142!5m2!1sen!2sbd"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <div><i class="fas fa-map-marker-alt"></i>Hazi Alam Hossen Road, Chand Uddyan Housing,Beribadh,
+            <div><i class="fas fa-map-marker-alt"></i>Head-Quarter: 
                 Mohammadpur, Dhaka-1207, Bangladesh
             </div>
+            <div><i class="fas fa-map-marker-alt"></i>Somalia, Mogadishu:  Bakaaro road street jidmarehan, Tawer cadaani building, Mogadishu, Somalia
+            </div>
+            <div><i class="fas fa-map-marker-alt"></i>Somaliland: 31-May District, Isha—Boorama, Hargiesa—Somaliland.
+            </div>
+            <div><i class="fas fa-map-marker-alt"></i>Niger: Harobanda/Bangu_Bana(Niamey/Niger)</div>
+            <div><i class="fas fa-map-marker-alt"></i>Benin: Abomey- Calavi/ Zogbadjè/ FIOGBE's House, Benin</div>
             <div><i class="fas fa-envelope-square"></i>usd.info.office@gmail.com</div>
             <div><i class="fas fa-phone-square-alt"></i>01712345678</div>
             <div><i class="fas fa-clock"></i>Sunday to Friday - 10:00am TO 20:00pm</div>
@@ -107,7 +109,7 @@
                 <input type="text" name="user_name" class="text-box" placeholder="Enter Name" required>
                 <input type="email" name="user_email" class="text-box" placeholder="Enter Email" required>
                 <input type="text" name="user_country" class="text-box" placeholder="Country of Residence" required>
-                <input type="text" name="user_whatsapp" class="text-box" placeholder="WhatsApp (if you want to add)">
+                <input type="text" name="user_whatsapp" class="text-box" placeholder="WhatsApp (If add must use country code)">
                 <select class="text-box" name="user_subject" id="">
                     <option value="">Subject</option>
                     <option value="Admission for Academic Programs ">Admission for Academic Programs </option>
@@ -153,13 +155,12 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact</h3>
-            <iframe title="" class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d3651.737257411086!2d90.352093!3d23.7567471!3m2!1i1024!2i768!4f13.1!2m1!1schand%20uddan%20housing%2C%20mohammadpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1683140674142!5m2!1sen!2sbd"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
-                <li class="contact-info">Mohammadpur, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="#"></a></li>
+                <li class="contact-info"><span style="color: #fff;">Head-Quarter:</span> Mohammadpur, Dhaka-1207, Bangladesh</li>
+                <li class="contact-info"><span style="color: #fff;">Somalia, Mogadishu:</span>  Bakaaro road street jidmarehan, Tawer cadaani building, Mogadishu, Somalia</li>
+                <li class="contact-info"><span style="color: #fff;">Somaliland:</span> 31-May District, Isha—Boorama, Hargiesa—Somaliland.</li>
+                <li class="contact-info"><span style="color: #fff;">Niger:</span> Harobanda/Bangu_Bana(Niamey/Niger)</li>
+                <li class="contact-info"><span style="color: #fff;">Benin:</span> Abomey- Calavi/ Zogbadjè/ FIOGBE's House, Benin</li>
             </ul>
 
             <ul class="icons">
