--- a/index.html
+++ b/index.html
@@ -90,37 +90,49 @@
         <div class="slideshow">
 
             <div class="slides fade">
-                <div class="slideNumber">1 / 5</div>
+                <div class="slideNumber">1 / 7</div>
                 <img src="Assets/Images/Slider/slider 1.jpg" alt="" style="width:100%">
-                <div class="caption">Caption Text</div>
+                <!-- <div class="caption">Caption Text</div> -->
             </div>
 
             <div class="slides fade">
-                <div class="slideNumber">2 / 5</div>
+                <div class="slideNumber">2 / 7</div>
                 <img src="Assets/Images/Slider/slider 2.jpg" alt="" style="width:100%">
-                <div class="caption">Caption Two</div>
+                <!-- <div class="caption">Caption Two</div> -->
             </div>
 
             <div class="slides fade">
-                <div class="slideNumber">3 / 5</div>
+                <div class="slideNumber">3 / 7</div>
                 <img src="Assets/Images/Slider/slider 3.jpg" alt="" style="width:100%">
-                <div class="caption">Caption Three</div>
+                <!-- <div class="caption">Caption Three</div> -->
             </div>
 
             <div class="slides fade">
-                <div class="slideNumber">4 / 5</div>
+                <div class="slideNumber">4 / 7</div>
                 <img src="Assets/Images/Slider/slider 4.jpg" alt="" style="width:100%">
-                <div class="caption">Caption Four</div>
+                <!-- <div class="caption">Caption Four</div> -->
             </div>
 
             <div class="slides fade">
-                <div class="slideNumber">5 / 5</div>
+                <div class="slideNumber">5 / 7</div>
                 <img src="Assets/Images/Slider/slider 5.jpg" alt="" style="width:100%">
-                <div class="caption">Caption Five</div>
+                <!-- <div class="caption">Caption Five</div> -->
             </div>
 
-            <a class="prev" onclick="plusSlides(-1)"><i class="fas fa-chevron-left"></i></a>
-            <a class="next" onclick="plusSlides(1)"><i class="fas fa-chevron-right"></i></a>
+            <div class="slides fade">
+                <div class="slideNumber">6 / 7</div>
+                <img src="Assets/Images/Slider/slider 6.jpg" alt="" style="width:100%">
+                <!-- <div class="caption">Caption Five</div> -->
+            </div>
+
+            <div class="slides fade">
+                <div class="slideNumber">7 / 7</div>
+                <img src="Assets/Images/Slider/slider 7.jpg" alt="" style="width:100%">
+                <!-- <div class="caption">Caption Five</div> -->
+            </div>
+
+            <!-- <a class="prev" onclick="plusSlides(-1)"><i class="fas fa-chevron-left"></i></a>
+            <a class="next" onclick="plusSlides(1)"><i class="fas fa-chevron-right"></i></a> -->
 
         </div>
         <br>
@@ -131,9 +143,14 @@
             <span class="pointer" onclick="currentSlide(3)"></span>
             <span class="pointer" onclick="currentSlide(4)"></span>
             <span class="pointer" onclick="currentSlide(5)"></span>
+            <span class="pointer" onclick="currentSlide(6)"></span>
+            <span class="pointer" onclick="currentSlide(7)"></span>
         </div>
     </section>
     <!-- Slider End -->
+    <!-- The Notable Team Members  start -->
+
+    <!-- The Notable Team Members  End -->
     <!-- Notice & Youtube  start -->
     <section class="notice-youtube">
         <div class="notices">
@@ -182,13 +199,12 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact</h3>
-            <iframe title="" class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d3651.737257411086!2d90.352093!3d23.7567471!3m2!1i1024!2i768!4f13.1!2m1!1schand%20uddan%20housing%2C%20mohammadpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1683140674142!5m2!1sen!2sbd"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
-                <li class="contact-info">Mohammadpur, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="#"></a></li>
+                <li class="contact-info"><span style="color: #fff;">Head-Quarter:</span> Mohammadpur, Dhaka-1207, Bangladesh</li>
+                <li class="contact-info"><span style="color: #fff;">Somalia, Mogadishu:</span>  Bakaaro road street jidmarehan, Tawer cadaani building, Mogadishu, Somalia</li>
+                <li class="contact-info"><span style="color: #fff;">Somaliland:</span> 31-May District, Isha—Boorama, Hargiesa—Somaliland.</li>
+                <li class="contact-info"><span style="color: #fff;">Niger:</span> Harobanda/Bangu_Bana(Niamey/Niger)</li>
+                <li class="contact-info"><span style="color: #fff;">Benin:</span> Abomey- Calavi/ Zogbadjè/ FIOGBE's House, Benin</li>
             </ul>
 
             <ul class="icons">
