--- a/journals.html
+++ b/journals.html
@@ -204,13 +204,12 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact</h3>
-            <iframe title="" class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d3651.737257411086!2d90.352093!3d23.7567471!3m2!1i1024!2i768!4f13.1!2m1!1schand%20uddan%20housing%2C%20mohammadpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1683140674142!5m2!1sen!2sbd"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
-                <li class="contact-info">Mohammadpur, Dhaka</li>
-                <li class="contact-info">WhatsApp: <a href="#"></a></li>
+                <li class="contact-info"><span style="color: #fff;">Head-Quarter:</span> Mohammadpur, Dhaka-1207, Bangladesh</li>
+                <li class="contact-info"><span style="color: #fff;">Somalia, Mogadishu:</span>  Bakaaro road street jidmarehan, Tawer cadaani building, Mogadishu, Somalia</li>
+                <li class="contact-info"><span style="color: #fff;">Somaliland:</span> 31-May District, Isha—Boorama, Hargiesa—Somaliland.</li>
+                <li class="contact-info"><span style="color: #fff;">Niger:</span> Harobanda/Bangu_Bana(Niamey/Niger)</li>
+                <li class="contact-info"><span style="color: #fff;">Benin:</span> Abomey- Calavi/ Zogbadjè/ FIOGBE's House, Benin</li>
             </ul>
 
             <ul class="icons">
