--- a/diploma.html
+++ b/diploma.html
@@ -66,6 +66,15 @@
                 <li><a href="patners.html">Partners</a></li>
                 <li><a href="activities.html">Activities</a></li>
                 <li>
+                    <a href="#" class="desktop-link">Center <i class="fas fa-angle-down"></i></a>
+                    <input type="checkbox" id="show-center">
+                    <label for="show-center">Center <i class="fas fa-angle-down"></i></label>
+                    <ul>
+                        <li><a href="center_for_academic_writing.html">Center for Academic Writing </a></li>
+                        <li><a href="center_for_marketing_in_the_age.html">Center for Marketing in the Age of Sustainable Development</a></li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#" class="desktop-link">About <i class="fas fa-angle-down"></i></a>
                     <input type="checkbox" id="show-features">
                     <label for="show-features">About <i class="fas fa-angle-down"></i></label>
